<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.RegistroUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtNombreUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:textColorHint="@color/DarkColor"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_person"
                tools:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNombreUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:maxLength="45"
                    android:textColor="@color/fondoGlobal"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellido"
                android:textColorHint="@color/DarkColor"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:maxLength="45"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtDNI"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/DNI"
                android:textColorHint="@color/DarkColor"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_contacto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDNI"
                    android:layout_width="386dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif"
                    android:inputType="number"
                    android:maxLength="45"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtDireccion"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/Direccion"
                android:textColorHint="@color/DarkColor"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_contacto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDireccion"
                    android:layout_width="386dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif"
                    android:inputType="text"
                    android:maxLength="45"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Celular"
                android:textColorHint="@color/DarkColor"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edCelular"
                    android:layout_width="383dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:inputType="number"
                    android:maxLength="45"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:text="Alumno" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Profesor" />
            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtEmailUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:hint="@string/EmailUser"
                android:textColorHint="@color/DarkColor"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_correo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmailUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:maxLength="45"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtPasswordUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PasswordUser"
                android:textColorHint="@color/DarkColor"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPasswordUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:text="@string/Registrar"
                android:textColor="@color/primaryTextColor"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rojo_cancelar"
                android:text="@string/Salir"
                android:textColor="@color/primaryTextColor"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>